[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "rt"] }
serde = "1.0.115"
serde-aux = "3"
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
reqwest = { version = "0.11.17", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
unicode-segmentation = "1.10.1"
url = { version = "2", features = ["serde"] }
validator = "0.16"


[dev-dependencies]
once_cell = "1.7.2"
claims = "0.7.1"
fake = "2.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1"
wiremock = "0.5"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
